--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url("components/container.css");
 @import url("components/avatar.css");
 @import url("components/button.css");
+@import url("components/banner.css")
 
 body {
     font-family: 'Lora', serif;
